<resources>
    <string name="app_name">Music Score App</string>
    <string name="add_score">Add Score</string>
    <string name="score_details">Score Details</string>
    <string name="action_settings">Settings</string>
    <string name="score_title">Score Title</string>
    <string name="add_image">Add image</string>
    <string name="tempo">Tempo</string>
    <string name="instrument">Instrument</string>
    <string name="sheet">sheet</string>
    <string name="delete">Delete</string>
    <string name="create">Create</string>
    <string name="more">more</string>
    <string name="play">play</string>
    <string name="date">date</string>
    <string name="date_created">Date created</string>
    <string name="view_images">View images</string>
    <string name="play_midi">Play MIDI</string>
    <string name="loading_your_score">Loading your score</string>
    <string name="save">Save</string>
    <string name="export">Export</string>
    <string name="share">Share</string>
    <string name="view">View</string>
    <string name="edit">Edit</string>
    <string name="search">search</string>
    <string name="sort">sort</string>
    <string name="date_recent_first">Date (recent first)</string>
    <string name="chip_sort_ascending">Ascending</string>
    <string name="chip_sort_descending">Descending</string>
    <string name="chip_sort_title">Title</string>
    <string name="chip_sort_date">Date</string>
    <string name="icon">icon</string>
    <string name="musicscoreapp">MusicScoreApp</string>
</resources>