<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_chips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/include"
        app:layout_constraintTop_toTopOf="parent">

        <HorizontalScrollView
            android:id="@+id/chipsForParts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:scrollbars="none">

            <com.google.android.material.chip.ChipGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_sort_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="chipClicked"
                    android:text="@string/chip_sort_date"
                    android:checked="true"
                    android:theme="@style/Theme.MaterialComponents"
                    app:chipBackgroundColor="@color/chip_style" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_sort_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="chipClicked"
                    android:theme="@style/Theme.MaterialComponents"
                    app:chipBackgroundColor="@color/chip_style"
                    android:text="@string/chip_sort_title" />
            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>

        <HorizontalScrollView
            android:id="@+id/chipsForOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:scrollbars="none">

            <com.google.android.material.chip.ChipGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_sort_asc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="chipClicked"
                    android:text="@string/chip_sort_ascending"
                    android:theme="@style/Theme.MaterialComponents"
                    app:chipBackgroundColor="@color/chip_style" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_sort_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="chipClicked"
                    android:checked="true"
                    android:theme="@style/Theme.MaterialComponents"
                    app:chipBackgroundColor="@color/chip_style"
                    android:text="@string/chip_sort_descending" />
            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>
    </LinearLayout>


    <include
        android:id="@+id/include"
        layout="@layout/content_main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_chips" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/create"
        app:layout_constraintBottom_toBottomOf="@+id/include"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />

</androidx.constraintlayout.widget.ConstraintLayout>